[metadata]
name = e3dc-rest
description = E3/DC rest server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Christopher Banck
author_email = christopher.banck@gmail.com
url = https://github.com/vchrisb/e3dc-rest
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe=False
python_requires = >=3.7

[isort]
profile = black

[flake8]
exclude = .venv, .git, build
max-line-length = 88
extend-ignore = E203, E302, E501, W293